clean up mark up

--- a/tims-quote-generator/index.html
+++ b/tims-quote-generator/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Quote Gen</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 
-  <body>
-    <h1>Tim's Definitive Quote Generator</h1>
-      <div class="quote-gen-container">
-        <div class="button-container">
-          <button class="hvr-buzz-out" id="btn"><img class="dice" src="images/dice.svg" alt="2D image of a single dice showing the 5 side"></button>
-        </div>
-        <div id="quoteDisplay"></div>
-      </div>
+  <title>Quote Gen</title>
+  <link href="styles.css" rel="stylesheet">
+  <script defer src="script.js">
+  </script>
+</head>
 
-  </body>
+<body>
+  <h1>Tim's Definitive Quote Generator</h1>
+
+
+  <div class="quote-gen-container">
+    <div class="button-container">
+      <button class="hvr-buzz-out" id="btn"><img alt="2D image of a single dice showing the 5 side" class="dice" src="images/dice.svg"></button>
+    </div>
+
+
+    <div id="quoteDisplay">
+    </div>
+  </div>
+</body>
 </html>
